--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "build-clean": "rm -rf build",
     "build-incremental": "tsc --incremental",
     "build": "yarn build-clean && tsc",
-    "ci:prettier-check": "prettier --check --config ./.prettierrc \"**/*.{ts,js,json}\"",
+    "ci:prettier-check": "prettier --check --config ./.prettierrc \"./src/**/*.{ts,tsx,js,jsx,json}\"",
     "ci:test": "yarn test --ci",
     "format-lint": "yarn format && yarn lint",
     "format": "prettier --config ./.prettierrc --write \"**/*.{ts,js,json}\"",
@@ -61,7 +61,7 @@
     "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf build && tsc -b && oclif-dev manifest && oclif-dev readme",
     "prepublishOnly": "bash ./scripts/publishLock.sh",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "version": "oclif-dev readme && git add README.md",
     "watch": "yarn build-clean && yarn nodemon"
   }
