adding vtex CustomCommand

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "commonjs",
     "outDir": "build",
     "rootDir": "src",
+    "skipLibCheck": true,
     "strict": true,
     "target": "es2018",
     "types": ["node", "jest"]
