--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "outDir": "build",
     "rootDir": "src",
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "target": "es2018",
     "types": ["node", "jest"]
   },
