--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "lib": ["es2018"],
     "module": "commonjs",
     "noImplicitAny": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "outDir": "build",
     "rootDir": "src",
     "skipLibCheck": true,
