--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "importHelpers": true,
     "lib": ["es2018"],
     "module": "commonjs",
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "outDir": "build",
