--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "ts-jest": "^25.2.1",
     "ts-node": "^8",
     "typescript": "^3.8.2",
-    "vtex": "^2.103.1-beta"
+    "vtex": "^2.105.1"
   },
   "engines": {
     "node": ">=8.0.0"
