--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ts-jest": "^25.2.1",
     "ts-node": "^8",
     "typescript": "^3.8.2",
-    "vtex": "^2.105.1"
+    "vtex": "^2.115.0"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -44,7 +44,7 @@
   "license": "MIT",
   "oclif": {
     "commands": "./build/commands",
-    "bin": "oclif-example",
+    "bin": "vtex",
     "devPlugins": [
       "@oclif/plugin-help"
     ]
