--- a/.github/workflows/plugin-documentation.yml
+++ b/.github/workflows/plugin-documentation.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 12.x
       - name: Install dependencies
-        run: npm install
+        run: yarn install
       - name: Update README
         run: yarn prepack
       - name: Commit changes
