--- a/package.json
+++ b/package.json
@@ -3,33 +3,11 @@
   "description": "vtex plugin template",
   "version": "0.0.0",
   "bugs": "https://github.com/vtex/cli-plugin-template/issues",
-  "dependencies": {
-    "@oclif/command": "^1",
-    "@oclif/config": "^1",
-    "tslib": "^1"
-  },
-  "devDependencies": {
-    "@oclif/dev-cli": "^1",
-    "@oclif/plugin-help": "^3",
-    "@types/jest": "^26.0.3",
-    "@types/node": "^14.0.14",
-    "eslint": "^6.8.0",
-    "eslint-config-oclif": "^3.1",
-    "eslint-config-vtex": "^12.3.0",
-    "globby": "^10",
-    "husky": "^4.2.5",
-    "jest": "^25.1.0",
-    "lint-staged": "^10.2.11",
-    "nodemon": "^2.0.2",
-    "nodemon-notifier-cli": "https://github.com/Slessi/nodemon-notifier-cli.git",
-    "prettier": "^2.0.1",
-    "ts-jest": "^25.2.1",
-    "ts-node": "^8",
-    "typescript": "^3.8.2",
-    "vtex": "^2.121.1"
-  },
+  "homepage": "https://github.com/vtex/cli-plugin-template",
+  "repository": "vtex/cli-plugin-template",
+  "license": "MIT",
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=14"
   },
   "files": [
     "/build",
@@ -37,11 +15,9 @@
     "/oclif.manifest.json",
     "/yarn.lock"
   ],
-  "homepage": "https://github.com/vtex/cli-plugin-template",
   "keywords": [
     "oclif-plugin"
   ],
-  "license": "MIT",
   "oclif": {
     "commands": "./build/commands",
     "bin": "vtex",
@@ -49,7 +25,20 @@
       "@oclif/plugin-help"
     ]
   },
-  "repository": "vtex/cli-plugin-template",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,js,tsx,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.json": [
+      "prettier --write"
+    ]
+  },
   "scripts": {
     "build-clean": "rm -rf build",
     "build-incremental": "tsc --incremental",
@@ -67,18 +56,31 @@
     "version": "oclif-dev readme && git add README.md",
     "watch": "yarn build-clean && yarn nodemon"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "dependencies": {
+    "@oclif/command": "^1",
+    "@oclif/config": "^1",
+    "node-localstorage": "^2.2.1",
+    "tslib": "^1"
   },
-  "lint-staged": {
-    "*.{ts,js,tsx,jsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.json": [
-      "prettier --write"
-    ]
+  "devDependencies": {
+    "@oclif/dev-cli": "^1",
+    "@oclif/plugin-help": "^3",
+    "@types/jest": "^26.0.3",
+    "@types/node": "^14.0.14",
+    "@types/node-localstorage": "^1.3.0",
+    "eslint": "^6.8.0",
+    "eslint-config-oclif": "^3.1",
+    "eslint-config-vtex": "^12.3.0",
+    "globby": "^10",
+    "husky": "^4.2.5",
+    "jest": "^25.1.0",
+    "lint-staged": "^10.2.11",
+    "nodemon": "^2.0.2",
+    "nodemon-notifier-cli": "https://github.com/Slessi/nodemon-notifier-cli.git",
+    "prettier": "^2.0.1",
+    "ts-jest": "^25.2.1",
+    "ts-node": "^8",
+    "typescript": "^3.8.2",
+    "vtex": "^2.121.1"
   }
 }
